As a user I can log in and out [Delivers #174645644]
